--- a/requirements.txt
+++ b/requirements.txt
@@ -1,32 +1,34 @@
 # SAM2 Video Training Dependencies
-# Core dependencies for the simplified SAM2 training system
+# Clean, minimal dependencies for the Lightning-based training system
 
-# PyTorch Lightning and ecosystem
+# Core ML Framework
 lightning>=2.0.0
 torch>=2.0.0
 torchvision>=0.15.0
 torchmetrics>=1.0.0
 
-# Data processing
+# Configuration Management
+hydra-core>=1.3.0
+omegaconf>=2.3.0
+
+# Data Processing
 numpy>=1.24.0
 Pillow>=9.0.0
+pycocotools>=2.0.6
 
-# Configuration and logging
-PyYAML>=6.0
+# Logging
 loguru>=0.7.0
 
-# Optional monitoring
+# Optional Monitoring (can be disabled with --no-wandb)
 wandb>=0.15.0
 
 # Utilities
 tqdm>=4.64.0
 
-# Type checking (optional)
-beartype>=0.16.0
+# SAM2 Dependencies (install from official repository)
+# git+https://github.com/facebookresearch/segment-anything-2.git
 
-# SAM2 specific (install separately as needed)
-# sam2  # This would be installed from the SAM2 repository
-
-# Development (optional)
+# Development Dependencies (optional)
 # pytest>=7.0.0
 # black>=22.0.0
+# isort>=5.12.0
