--- a/configs/train_1.yaml
+++ b/configs/train_1.yaml
@@ -9,7 +9,7 @@ model:
   
 
 trainer:
-  val_check_interval: null
+  val_check_interval: 0.2
   log_every_n_steps: 50
   gradient_clip_val: 0.1
 
@@ -21,7 +21,7 @@ visualization:
 
 data:
   video_clip_length: 8
-  stride: 4
+  stride: 8
 
 loss:
   type: bce
