--- a/requirements.txt
+++ b/requirements.txt
@@ -20,9 +20,8 @@ imageio>=2.28.0
 # Logging
 loguru>=0.7.0
 
-# Optional Monitoring (can be disabled with --no-wandb)
+# Experiment tracking
 wandb>=0.15.0
-swanlab>=0.3.4
 
 # Utilities
 tqdm>=4.64.0
