--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -75,15 +75,19 @@ optimizer:
   type: AdamW
   lr: 1e-4
   weight_decay: 1e-4
-  betas: [0.9, 0.999]
-  eps: 1e-8
+  betas: [0.9, 0.98]
+  eps: 1e-5
 
-# Scheduler configuration
+# Scheduler configuration (cosine with warmup)
 scheduler:
   enabled: true
-  type: CosineAnnealingLR
-  eta_min: 1e-6
-  T_max: null
+  warmup_steps: 500
+  num_cycles: 0.5
+  
+  # Warmup configuration
+  warmup_enabled: true
+  warmup_epochs: 5
+  warmup_start_lr: 1e-7
 
 # Trainer configuration
 trainer:
@@ -95,8 +99,8 @@ trainer:
   max_epochs: 5
   gradient_clip_val: 1.0
   accumulate_grad_batches: 1
-  limit_train_batches: 1.0
-  limit_val_batches: 1.0
+  # limit_train_batches: 1.0
+  # limit_val_batches: 1.0
   val_check_interval: 1.0
   num_sanity_val_steps: 2
   enable_checkpointing: true
@@ -129,10 +133,7 @@ callbacks:
   - _target_: lightning.pytorch.callbacks.ModelSummary  
     max_depth: 2
 
-  - _target_: lightning.pytorch.callbacks.EarlyStopping
-    monitor: "val/total_loss"
-    patience: 10
-    mode: min
+
 
 # Visualization controls
 visualization:
