save before reduce memory usage

--- a/configs/best.yaml
+++ b/configs/best.yaml
@@ -21,6 +21,7 @@ module:
 data_module:
   _target_: sam2_video.training.trainer.SAM2LightningDataModule
   data: ${data}
+  train_shuffle: true
 
 # Model configuration
 model:
@@ -75,7 +76,7 @@ optimizer:
   lr: 0.005
   weight_decay: 0.1
   betas: [0.9, 0.999]
-  eps: 1e-7
+  eps: 1e-5
   amsgrad: true
   warmup_factor: 0.1
 
@@ -97,7 +98,7 @@ trainer:
   accelerator: auto
   devices: 1
   precision: 16
-  max_epochs: 3
+  max_epochs: 2
   gradient_clip_val: 1.0
   accumulate_grad_batches: 8
   val_check_interval: 0.2
@@ -132,15 +133,15 @@ callbacks:
   - _target_: lightning.pytorch.callbacks.ModelSummary  
     max_depth: 2
 
-  - _target_: lightning.pytorch.callbacks.StochasticWeightAveraging
-    swa_lrs: 0.005
+  # - _target_: lightning.pytorch.callbacks.StochasticWeightAveraging
+  #   swa_lrs: 0.005
 
 
 
 # Visualization controls
 visualization:
   # Conservative defaults to minimize training overhead
-  enabled: true
+  enabled: false
   train_every_n_steps: 25  
   val_first_batch_every_n_epochs: 0
   max_length: 4
