--- a/configs/combo/endovis17/2_mem_sfx.yaml
+++ b/configs/combo/endovis17/2_mem_sfx.yaml
@@ -11,5 +11,7 @@ model:
   - memory_attention
   prompt_type: point
   num_pos_points: 1
+combo:
+  name: endovis17_2_mem_sfx
 data_module:
   data: ${data}
