--- a/configs/combo/cholecseg8k/1_mem.yaml
+++ b/configs/combo/cholecseg8k/1_mem.yaml
@@ -9,6 +9,8 @@ model:
   - memory_attention
   prompt_type: point
   num_pos_points: 1
+combo:
+  name: cholecseg8k_1_mem
 data_module:
   data: ${data}
 
