--- a/configs/combo/cholecseg8k/3_mem_sfx.yaml
+++ b/configs/combo/cholecseg8k/3_mem_sfx.yaml
@@ -11,5 +11,7 @@ model:
   - memory_attention
   prompt_type: point
   num_pos_points: 1
+combo:
+  name: cholecseg8k_3_mem_sfx
 data_module:
   data: ${data}
