--- a/configs/combo/cholecseg8k/5_mem.yaml
+++ b/configs/combo/cholecseg8k/5_mem.yaml
@@ -8,6 +8,8 @@ model:
   - memory_encoder
   - memory_attention
   prompt_type: box
+combo:
+  name: cholecseg8k_5_mem
 data_module:
   data: ${data}
 
