--- a/configs/combo/cholecseg8k/7_mem_sfx.yaml
+++ b/configs/combo/cholecseg8k/7_mem_sfx.yaml
@@ -9,5 +9,7 @@ model:
   - memory_encoder
   - memory_attention
   prompt_type: mask
+combo:
+  name: cholecseg8k_7_mem_sfx
 data_module:
   data: ${data}
