--- a/configs/combo/cholecseg8k/8_mem.yaml
+++ b/configs/combo/cholecseg8k/8_mem.yaml
@@ -8,6 +8,8 @@ model:
   - memory_encoder
   - memory_attention
   prompt_type: mask
+combo:
+  name: cholecseg8k_8_mem
 data_module:
   data: ${data}
 
