--- a/configs/combo/cholecseg8k/9_mem_sfx.yaml
+++ b/configs/combo/cholecseg8k/9_mem_sfx.yaml
@@ -11,5 +11,7 @@ model:
   - memory_encoder
   - memory_attention
   prompt_type: mask
+combo:
+  name: cholecseg8k_9_mem_sfx
 data_module:
   data: ${data}
