--- a/configs/combo/cholecseg8k/raw_mask.yaml
+++ b/configs/combo/cholecseg8k/raw_mask.yaml
@@ -8,6 +8,8 @@ model:
   - mask_decoder
   prompt_type: mask
   num_pos_points: 1
+combo:
+  name: cholecseg8k_raw_mask
 data_module:
   data: ${data}
 
