--- a/configs/combo/cholecseg8k/raw_point.yaml
+++ b/configs/combo/cholecseg8k/raw_point.yaml
@@ -8,6 +8,8 @@ model:
   - mask_decoder
   prompt_type: point
   num_pos_points: 1
+combo:
+  name: cholecseg8k_raw_point
 data_module:
   data: ${data}
 
