--- a/configs/combo/endovis17/1_mem_sfx.yaml
+++ b/configs/combo/endovis17/1_mem_sfx.yaml
@@ -10,5 +10,7 @@ model:
   - memory_attention
   prompt_type: point
   num_pos_points: 1
+combo:
+  name: endovis17_1_mem_sfx
 data_module:
   data: ${data}
