--- a/configs/combo/endovis17/3_mem_sfx.yaml
+++ b/configs/combo/endovis17/3_mem_sfx.yaml
@@ -12,5 +12,7 @@ model:
   - memory_attention
   prompt_type: point
   num_pos_points: 1
+combo:
+  name: endovis17_3_mem_sfx
 data_module:
   data: ${data}
