--- a/configs/combo/endovis17/5_mem_sfx.yaml
+++ b/configs/combo/endovis17/5_mem_sfx.yaml
@@ -10,5 +10,7 @@ model:
   - memory_encoder
   - memory_attention
   prompt_type: box
+combo:
+  name: endovis17_5_mem_sfx
 data_module:
   data: ${data}
