--- a/configs/combo/endovis17/6_mem.yaml
+++ b/configs/combo/endovis17/6_mem.yaml
@@ -8,6 +8,8 @@ model:
   - memory_encoder
   - memory_attention
   prompt_type: box
+combo:
+  name: endovis17_6_mem
 data_module:
   data: ${data}
 
