--- a/configs/combo/endovis17/6_mem_sfx.yaml
+++ b/configs/combo/endovis17/6_mem_sfx.yaml
@@ -11,5 +11,7 @@ model:
   - memory_encoder
   - memory_attention
   prompt_type: box
+combo:
+  name: endovis17_6_mem_sfx
 data_module:
   data: ${data}
