save before reduce memory usage 2

--- a/configs/best.yaml
+++ b/configs/best.yaml
@@ -40,11 +40,9 @@ model:
 
   # Device and image
   device: cuda
-  image_size: 512
-
   # Prompting behavior
   prompt_type: point  # {point, box, mask}
-  forward_backbone_per_frame_for_eval: false
+  forward_backbone_per_frame_for_eval: true
 
   # Prompt generation parameters
   num_pos_points: 1
