cuda memory bug

--- a/configs/best.yaml
+++ b/configs/best.yaml
@@ -42,7 +42,7 @@ model:
   device: cuda
   # Prompting behavior
   prompt_type: point  # {point, box, mask}
-  forward_backbone_per_frame_for_eval: true
+  forward_backbone_per_frame_for_eval: false
 
   # Prompt generation parameters
   num_pos_points: 1
