--- a/configs/overfit.yaml
+++ b/configs/overfit.yaml
@@ -45,6 +45,7 @@ model:
   # Prompting behavior
   prompt_type: point  # {point, box, mask}
   forward_backbone_per_frame_for_eval: false
+  use_activation_checkpoint: true
 
   # Prompt generation parameters
   num_pos_points: 1
